@@ -2,6 +2,7 @@ package twilightforest.entity.monster;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.sounds.SoundEvent;
+import net.minecraft.sounds.SoundEvents;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
@@ -11,14 +12,20 @@ import net.minecraft.world.entity.ai.goal.target.HurtByTargetGoal;
 import net.minecraft.world.entity.ai.goal.target.NearestAttackableTargetGoal;
 import net.minecraft.world.entity.monster.Monster;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.entity.vehicle.Boat;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.Vec3;
+import org.jetbrains.annotations.Nullable;
+import twilightforest.TwilightForestMod;
 import twilightforest.data.tags.EntityTagGenerator;
 import twilightforest.entity.IHostileMount;
 import twilightforest.entity.ai.goal.ChargeAttackGoal;
 import twilightforest.init.TFDamageTypes;
 import twilightforest.init.TFSounds;
+import twilightforest.util.EntityUtil;
 
 public class PinchBeetle extends Monster implements IHostileMount {
 
@@ -46,6 +53,12 @@ public class PinchBeetle extends Monster implements IHostileMount {
 			.add(Attributes.ARMOR, 2.0D);
 	}
 
+	@Nullable
+	@Override
+	protected SoundEvent getAmbientSound() {
+		return TFSounds.PINCH_BEETLE_AMBIENT.get();
+	}
+
 	@Override
 	protected SoundEvent getHurtSound(DamageSource source) {
 		return TFSounds.PINCH_BEETLE_HURT.get();
@@ -63,19 +76,25 @@ public class PinchBeetle extends Monster implements IHostileMount {
 
 	@Override
 	public void aiStep() {
-
 		super.aiStep();
 		this.dimensions = this.getDimensions(this.getPose());
 
 		if (!this.getPassengers().isEmpty()) {
-			this.getLookControl().setLookAt(this.getPassengers().get(0), 100.0F, 100.0F);
+			Entity passenger = this.getPassengers().getFirst();
+
+			if (passenger.getVehicle() != this) {
+				this.removePassenger(passenger);
+				return;
+			}
+
+			this.getLookControl().setLookAt(passenger, 100.0F, 100.0F);
 			//always set our passenger as our target
-			if (this.getPassengers().get(0) instanceof LivingEntity entity) {
+			if (passenger instanceof LivingEntity entity) {
 				this.setTarget(entity);
 			}
 
 			//if our held player switches gamemodes let them go
-			if (this.getPassengers().get(0) instanceof Player player && player.getAbilities().invulnerable) {
+			if (passenger instanceof Player player && player.getAbilities().invulnerable) {
 				player.stopRiding();
 				this.setTarget(null);
 			}
@@ -100,6 +119,7 @@ public class PinchBeetle extends Monster implements IHostileMount {
 
 	@Override
 	public boolean doHurtTarget(Entity entity) {
+		TwilightForestMod.LOGGER.error("BEMTI {}", this.getPassengers().isEmpty());
 		if (this.getPassengers().isEmpty()) {
 			var v = entity.getVehicle();
 
@@ -110,8 +130,27 @@ public class PinchBeetle extends Monster implements IHostileMount {
 				entity.startRiding(this, true);
 			}
 		}
-		entity.hurt(TFDamageTypes.getEntityDamageSource(this.level(), TFDamageTypes.CLAMPED, this), (float) this.getAttributeValue(Attributes.ATTACK_DAMAGE));
-		return super.doHurtTarget(entity);
+		return EntityUtil.properlyApplyCustomDamageSource(this, entity, TFDamageTypes.getEntityDamageSource(this.level(), TFDamageTypes.CLAMPED, this), null);
+	}
+
+	@Override
+	public boolean startRiding(Entity entity, boolean force) {
+		if (entity instanceof Boat boat) {
+			boat.kill();
+			if (this.level().getGameRules().getBoolean(GameRules.RULE_DOENTITYDROPS)) {
+				for (int i = 0; i < 3; i++) {
+					this.spawnAtLocation(boat.getVariant().getPlanks());
+				}
+
+				for (int j = 0; j < 2; j++) {
+					this.spawnAtLocation(Items.STICK);
+				}
+			}
+			this.playSound(SoundEvents.ZOMBIE_BREAK_WOODEN_DOOR);
+			return false;
+		}
+
+		return super.startRiding(entity, force);
 	}
 
 	@Override
